--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -25,13 +25,23 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.data:spring-data-jpa'
 
 //    implementation 'org.springframework.boot:spring-data-commons'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb-reactive
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive', version: '2.1.6.RELEASE'
+
+    // https://mvnrepository.com/artifact/com.github.mongobee/mongobee
+    implementation 'org.javassist:javassist:3.22.0-GA'
+    implementation 'com.github.mongobee:mongobee:0.13'
+
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+    implementation 'javax.xml.bind:jaxb-api'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
