[Javaverse] springboot - initial refresh token.

--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     
 //    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive', version: '2.1.6.RELEASE'
     implementation 'org.javassist:javassist:3.22.0-GA'
-    implementation 'com.github.mongobee:mongobee:0.13'
+//    implementation 'com.github.mongobee:mongobee:0.13'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api'
     
