--- a/spring/projectone/src/main/resources/application.yml
+++ b/spring/projectone/src/main/resources/application.yml
@@ -14,4 +14,6 @@ spring:
     hibernate:
       ddl-auto: create-drop
 
+#spring.main.lazy-initialization: true   # coming  2.2.x+
+
 #docker run -d --rm --name mysql -v mysql_data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=javaverse -p 3306:3306 mysql:latest
