--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -1,9 +1,10 @@
+
 plugins {
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
     id 'java'
 }
-
 apply plugin: 'io.spring.dependency-management'
+
 
 group = 'com.javaverse'
 version = '0.0.1'
@@ -21,6 +22,8 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
@@ -46,4 +49,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        exclude group: 'junit', module: 'junit'
+    }
+    
 }
