[Javaverse] springboot - done Save products

--- a/spring/projectone/src/lombok.config
+++ b/spring/projectone/src/lombok.config
@@ -1,6 +1,7 @@
 config.stopBubbling = true
 lombok.fieldDefaults.defaultPrivate = true
 lombok.equalsAndHashCode.callSuper = call
+lombok.tostring.callsuper = call
 
 # Do not use following  annotations.
 lombok.sneakyThrows.flagUsage=warning
