--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -1,14 +1,22 @@
-
 plugins {
     id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
     id 'java'
+    id 'net.ltgt.apt' version '0.20'
+    id "com.google.cloud.tools.jib" version "1.3.0"
+    id "org.sonarqube" version "2.7"
 }
+
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'net.ltgt.apt-idea'
 apply plugin: 'io.spring.dependency-management'
 
 
 group = 'com.javaverse'
 version = '0.0.1'
 sourceCompatibility = '12'
+targetCompatibility = '12'
 
 configurations {
     developmentOnly
@@ -30,7 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    
+
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
 
@@ -38,12 +46,17 @@ dependencies {
 
 //    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive', version: '2.1.6.RELEASE'
     implementation 'org.javassist:javassist:3.22.0-GA'
-//    implementation 'com.github.mongobee:mongobee:0.13'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api'
-    
+
     runtimeOnly 'mysql:mysql-connector-java'
 
+    implementation('org.mapstruct:mapstruct:1.3.0.Final')
+    annotationProcessor('org.mapstruct:mapstruct-processor:1.3.0.Final')
+    testAnnotationProcessor('org.mapstruct:mapstruct-processor:1.3.0.Final')
+    
+    
+    
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -55,4 +68,11 @@ dependencies {
         exclude group: 'junit', module: 'junit'
     }
     
+}
+
+compileJava {
+    options.compilerArgs = [
+            '-Amapstruct.suppressGeneratorTimestamp=true',
+            '-Amapstruct.suppressGeneratorVersionInfoComment=true'
+    ]
 }
