--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -26,6 +26,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    implementation{
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+//        exclude group: 'org.jboss.logging', module: 'jboss-logging'
+    }
 }
 
 repositories {
@@ -38,7 +42,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    implementation('org.springframework.boot:spring-boot-starter-log4j2')
+    implementation('com.lmax:disruptor:3.4.2')
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
 
@@ -67,6 +72,7 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         exclude group: 'junit', module: 'junit'
     }
+
     
 }
 
