--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     implementation('org.mapstruct:mapstruct:1.3.0.Final')
     annotationProcessor('org.mapstruct:mapstruct-processor:1.3.0.Final')
     testAnnotationProcessor('org.mapstruct:mapstruct-processor:1.3.0.Final')
-    
-    
+
+    compile 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
     
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
