--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -26,9 +26,9 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
-    implementation{
+    implementation {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-//        exclude group: 'org.jboss.logging', module: 'jboss-logging'
+        exclude group: 'org.axonframework', module: 'axon-server-connector'
     }
 }
 
@@ -49,8 +49,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
 
     compile 'org.axonframework:axon-spring-boot-starter:4.1.1'
-
-//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive', version: '2.1.6.RELEASE'
+    
     implementation 'org.javassist:javassist:3.22.0-GA'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api'
@@ -62,7 +61,7 @@ dependencies {
     testAnnotationProcessor('org.mapstruct:mapstruct-processor:1.3.0.Final')
 
     compile 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
-    
+
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -74,7 +73,7 @@ dependencies {
         exclude group: 'junit', module: 'junit'
     }
 
-    
+
 }
 
 compileJava {
