--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -33,6 +33,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: fonts/RobotoMono-Light.ttf
+          weight: 200
+        - asset: fonts/RobotoMono-Regular.ttf
+          weight: 300
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -55,6 +62,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  #  fonts:
+  #    - family: RobotoMono
+  #        fonts:
+  #          - asset:  asset/font/RobotoMono-Light.ttf
+  #            weight: 200
+  #                        - asset: asset/font/RobotoMono-Regular.ttf
+  #                        weight: 300
   # fonts:
   #   - family: Schyler
   #     fonts:
