--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -22,10 +22,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.3+4
   http: ^0.12.0+2
+  json_annotation: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.6.2
+  json_serializable: ^3.1.0
 
 
 # For information on the generic Dart part of this file, see the
