--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
