--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -40,12 +40,10 @@ flutter:
   assets:
     - images/dutchmill-logo.png
   fonts:
-    - family: RobotoMono
+    - family: K2D
       fonts:
-        - asset: fonts/RobotoMono-Light.ttf
-          weight: 200
-        - asset: fonts/RobotoMono-Regular.ttf
-          weight: 300
+        - asset: fonts/K2D-Regular.ttf
+          weight: 400
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
