[Javaverse] Flutter - added image picker and demo upload image

--- a/flutter/projectone/ios/Runner/Info.plist
+++ b/flutter/projectone/ios/Runner/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PhotoLibrary access warning</string>
+		<key>NSCameraUsageDescription</key>
+    	<string>Camera access warning</string>
+    		<key>NSMicrophoneUsageDescription</key>
+        	<string>Microphone access warning</string>
 </dict>
 </plist>
