--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
   intl: ^0.15.8
-
+  image_picker: ^0.6.1
+  dio: ^2.1.13
 dev_dependencies:
   flutter_test:
     sdk: flutter
