--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -14,7 +14,7 @@ description: dutchmill project one.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,6 +26,8 @@ dependencies:
   intl: ^0.15.8
   image_picker: ^0.6.1
   dio: ^2.1.13
+  datetime_picker_formfield: ^0.4.1
+  animated_splash: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,6 +42,8 @@ dev_dependencies:
 flutter:
   assets:
     - images/dutchmill-logo.png
+    - images/person.png
+    - images/person.jpg
   fonts:
     - family: K2D
       fonts:
