--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   build_runner: ^1.6.2
   json_serializable: ^3.1.0
 
+#flutter pub run build_runner build --delete-conflicting-outputs
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
