--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
+    id 'org.springframework.boot' version '2.2.0.M5'
+//    id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
     id 'java'
     id 'net.ltgt.apt' version '0.20'
     id "com.google.cloud.tools.jib" version "1.3.0"
