--- a/spring/projectone/build.gradle
+++ b/spring/projectone/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.0.M5'
+//    id 'org.springframework.boot' version '2.2.0.M5'
 //    id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
     id 'java'
     id 'net.ltgt.apt' version '0.20'
     id "com.google.cloud.tools.jib" version "1.3.0"
@@ -33,10 +34,13 @@ configurations {
     }
 }
 
+
+
 repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/snapshot' }
     maven { url 'https://repo.spring.io/milestone' }
+    gradlePluginPortal()
 }
 
 dependencies {
