--- a/spring/projectone/src/main/resources/application.yml
+++ b/spring/projectone/src/main/resources/application.yml
@@ -1,18 +1,19 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/javaverse?autoReconnect=true&cachePrepStmts=true&cacheCallableStmts=true&cacheServerConfiguration=true&useLocalSessionState=true&elideSetAutoCommits=true&alwaysSendSetIsolation=false&enableQueryTimeouts=false
     username: root
     password: ENC(ecVbG3YHA7hiL8oPS7KUc3gF+cmeGyJrJ+ZxQnk+QdZsq+LCFzAOiw==)   #this is encrypted by jasypt
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
   main:
     lazy-initialization: true
   jackson:
     mapper:
       accept_case_insensitive_properties: true
       accept_case_insensitive_enums: true
+  profiles:
+    active: docker
 
 
 #spring.main.lazy-initialization: true   # coming  2.2.x+
@@ -24,13 +25,29 @@ server:
     enabled: true
   http2:
     enabled: true
-
-
-
-
 jasypt:
   encryptor:
     bean: commonEncryptor
 
 
-#docker run -d --rm --name mysql -v mysql_data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=javaverse -p 3306:3306 mysql:latest
+---
+spring:
+  profiles: dev
+  datasource:
+    url: jdbc:mysql://localhost:3306/javaverse?autoReconnect=true&cachePrepStmts=true&cacheCallableStmts=true&cacheServerConfiguration=true&useLocalSessionState=true&elideSetAutoCommits=true&alwaysSendSetIsolation=false&enableQueryTimeouts=false
+
+
+
+---
+spring:
+  profiles: docker
+  datasource:
+    url: jdbc:mysql://mysql-server:3306/javaverse?autoReconnect=true&cachePrepStmts=true&cacheCallableStmts=true&cacheServerConfiguration=true&useLocalSessionState=true&elideSetAutoCommits=true&alwaysSendSetIsolation=false&enableQueryTimeouts=false
+
+
+
+#  docker build -t javaverse/dutchmill .
+#
+#  docker run -d --rm --name mysql -v mysql_data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=javaverse -p 3306:3306 mysql:latest
+#
+#  docker run -d --rm --name dutchmill-app --link mysql-server:mysql-server -p 8080:8080 javaverse/dutchmill:latest
