--- a/flutter/projectone/pubspec.yaml
+++ b/flutter/projectone/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   dio: ^2.1.13
   datetime_picker_formfield: ^0.4.1
   animated_splash: ^1.0.0
-  provider: ^3.0.0+1
+  provider: ^3.1.0
+  auto_size_text: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
